--- a/home.html
+++ b/home.html
@@ -23,7 +23,7 @@
 <h2 class="text-white text-xl font-bold leading-tight tracking-[-0.015em]">SecureCode</h2>
 </div>
 <nav class="flex flex-1 justify-end items-center gap-6">
-<a class="text-gray-300 hover:text-white text-sm font-medium leading-normal transition-colors" href="#">Projects</a>
+<a class="text-gray-300 hover:text-white text-sm font-medium leading-normal transition-colors" href="./projects.html">Projects</a>
 <a class="text-gray-300 hover:text-white text-sm font-medium leading-normal transition-colors" href="#">Skills</a>
 <a class="text-gray-300 hover:text-white text-sm font-medium leading-normal transition-colors" href="#">Blog</a>
 <a class="text-gray-300 hover:text-white text-sm font-medium leading-normal transition-colors" href="#">Contact</a>
