commiting for work

--- a/home.html
+++ b/home.html
@@ -4,6 +4,7 @@
 <link as="style" href="https://fonts.googleapis.com/css2?display=swap&amp;family=Noto+Sans%3Awght%40400%3B500%3B700%3B900&amp;family=Space+Grotesk%3Awght%40400%3B500%3B700" onload="this.rel='stylesheet'" rel="stylesheet"/>
 <style type="text/tailwindcss">
       :root {
+        color-scheme: dark;
         --primary-color: #1978e5;
       }
     </style>
@@ -23,7 +24,7 @@
 <h2 class="text-white text-xl font-bold leading-tight tracking-[-0.015em]">SecureCode</h2>
 </div>
 <nav class="flex flex-1 justify-end items-center gap-6">
-<a class="text-gray-300 hover:text-white text-sm font-medium leading-normal transition-colors" href="./projects.html">Projects</a>
+<a class="text-gray-300 hover:text-white text-sm font-medium leading-normal transition-colors" href="/projects">Projects</a>
 <a class="text-gray-300 hover:text-white text-sm font-medium leading-normal transition-colors" href="#">Skills</a>
 <a class="text-gray-300 hover:text-white text-sm font-medium leading-normal transition-colors" href="#">Blog</a>
 <a class="text-gray-300 hover:text-white text-sm font-medium leading-normal transition-colors" href="#">Contact</a>
