--- a/projects.html
+++ b/projects.html
@@ -127,7 +127,7 @@
           </div>
           <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6 p-4">
 <!-- BINGO        BINGO   BINGO         BINGO -->
-            <a class="bento-item rounded-xl overflow-hidden flex flex-col group" href="./bingo.html">
+            <a class="bento-item rounded-xl overflow-hidden flex flex-col group" href="./bingo">
               <div class="relative aspect-[16/10] w-full overflow-hidden">
                 <img alt="Koletage Bingo img"
                   class="w-full h-full object-cover transition-transform duration-300 group-hover:scale-105"
