--- a/home.html
+++ b/home.html
@@ -32,31 +32,37 @@
 <span class="truncate">Resume</span>
 </button>
 </nav>
+
 </header>
 <main class="px-10 md:px-20 lg:px-40 flex flex-1 justify-center py-10">
 <div class="layout-content-container flex flex-col max-w-5xl flex-1 gap-8 md:gap-12">
 <section class="@container">
-<div class="flex min-h-[400px] md:min-h-[480px] flex-col gap-6 bg-cover bg-center bg-no-repeat rounded-2xl items-start justify-end p-6 md:p-10 shadow-2xl" style='background-image: linear-gradient(rgba(0, 0, 0, 0.2) 0%, rgba(0, 0, 0, 0.6) 100%), url("https://lh3.googleusercontent.com/aida-public/AB6AXuAkbE6aIziHldQQuqCSbw3nB3vHxvRRSD-NADg0MHnWWJwOZue3vNyN7zSA_D1MtUJDX99tYzsU77CfFEADzCJoWoTPX-3MK65vnwqNz9fh55p-TqAOpSgfUl4eBTa2TFSFDBwy7eS6FhT_IEUZAs7C8OeqSYDcagP4ZTGUwQaCzhD5nbTCLCGZw6EOqKgPVZQyKHjZ2Z_ldOmBd7MbUjON85TEPrscn_X1AjMQoFN8kinaLBGDbIMwSQSDPpeCI_O8_9DYS2BfGir4");'>
+<div class="flex min-h-[400px] md:min-h-[480px] flex-col gap-6 bg-cover bg-center bg-no-repeat rounded-2xl items-start justify-end p-6 md:p-10 shadow-2xl" style='background-image: linear-gradient(rgba(0, 0, 0, 0.2) 0%, rgba(0, 0, 0, 0.6) 100%), url("/img/cyberImage.png");'>
 <div class="flex flex-col gap-3 text-left max-w-2xl">
 <h1 class="text-white text-3xl font-black leading-tight tracking-[-0.033em] @[480px]:text-4xl @[768px]:text-5xl @[480px]:font-black @[480px]:leading-tight @[480px]:tracking-[-0.033em]">
-                    Hi, I'm Alex, a Computer Science Student
-                  </h1>
+  Welcome.
+</h1>
 <p class="text-gray-200 text-sm font-normal leading-relaxed @[480px]:text-base @[480px]:font-normal @[480px]:leading-relaxed">
-                    I'm passionate about cybersecurity and building secure applications. Explore my projects, skills, and blog to learn more about my work.
-                  </p>
+  My name's Zoltan and I'm a computer science student focusing in cybersecurity risk and compliance. Please explore the site, lmk what you think. If you're my friend you'd be looking for the projects.
+</p>
 </div>
 </div></section>
 <section class="grid grid-cols-1 @[480px]:grid-cols-2 @[768px]:grid-cols-3 gap-6 md:gap-8">
 <div class="col-span-1 @[480px]:col-span-2 @[768px]:col-span-3">
 <h2 class="text-white text-2xl md:text-3xl font-bold leading-tight tracking-[-0.015em]">Projects</h2>
 </div>
+
+<a href="/bingo">
 <div class="flex flex-col gap-4 p-4 rounded-xl bg-[#1c2126] border border-[#293038] hover:border-[var(--primary-color)] transition-all duration-300 ease-in-out transform hover:scale-105 shadow-lg">
-<div class="w-full bg-center bg-no-repeat aspect-video bg-cover rounded-lg" style='background-image: url("https://lh3.googleusercontent.com/aida-public/AB6AXuCMBdqqQcq9GLZjKjxv4z9v4wE2ZDCtwf74NHiiPmDX-a-rL1tOnIlv2dC5X3kgDJhWtJAq1eafTd6O094laJD150uCpnxtpOYgEl9gzCfD_xYTnWct63sBru_1reZ2-RJ_zM0sLLOB6wLQ45NqRmmssQyWlRDPevFZ6pgWq8o6qnrwBSXstCF7Bc_1R0eA3w0v3UPDY7muG0Xn9mFpQsNrJ8H5XIMXdiaW3-yK9hESUFcByWEquGNrsW2VlpDnw1V2PLuRAxDAZqOE");'></div>
+<div class="w-full bg-center bg-no-repeat aspect-video bg-cover rounded-lg" style='background-image: url("/img/koletage.jpg");'></div>
 <div>
-<h3 class="text-white text-lg font-semibold leading-normal">SecureAuth</h3>
-<p class="text-[#9daab8] text-sm font-normal leading-relaxed mt-1">A secure authentication system using multi-factor authentication.</p>
+<h3 class="text-white text-lg font-semibold leading-normal">Koletage BINGO</h3>
+<p class="text-[#9daab8] text-sm font-normal leading-relaxed mt-1">yeah yeah yeah - if you're an employer please skip this one.</p>
 </div>
 </div>
+</a>
+
+
 <div class="flex flex-col gap-4 p-4 rounded-xl bg-[#1c2126] border border-[#293038] hover:border-[var(--primary-color)] transition-all duration-300 ease-in-out transform hover:scale-105 shadow-lg">
 <div class="w-full bg-center bg-no-repeat aspect-video bg-cover rounded-lg" style='background-image: url("https://lh3.googleusercontent.com/aida-public/AB6AXuDGGNFbIh4yUnrMby4TVfs21pz3ZcCrkpWXFd2cVq_w83a_3Vt8taFoZKctCaepTD-Dgh16pwnBUO8h-2FM7RaECy7cPOXrGSgVyFQ9l20BlynqY8F-sKiZb37Z_fjwhNgR9g1eFaN4HMu34N88t4vZvvYv60vWbHX13mSSSEwf57PNpB-77VDC3lZN_QzXe5jD0Zw_0tZE_gV4NZv_3uq0exsm2nqapa0t-96zgcrIyekbI_oQd7734Xub9e15ItAY_J9Yu91o6UfW");'></div>
 <div>
