--- a/projects.html
+++ b/projects.html
@@ -69,10 +69,10 @@
         </div>
         <nav class="hidden md:flex items-center gap-8">
           <a class="text-[var(--text-secondary)] hover:text-[var(--accent-color)] text-sm font-medium leading-normal transition-colors"
-            href="#">About</a>
+            href="/">Home</a>
           <a class="text-[var(--accent-color)] text-sm font-medium leading-normal" href="#">Projects</a>
           <a class="text-[var(--text-secondary)] hover:text-[var(--accent-color)] text-sm font-medium leading-normal transition-colors"
-            href="#">Blog</a>
+            href="/blog">Blog</a>
           <a class="text-[var(--text-secondary)] hover:text-[var(--accent-color)] text-sm font-medium leading-normal transition-colors"
             href="#">Contact</a>
         </nav>
