old laptop merge

--- a/home.html
+++ b/home.html
@@ -8,7 +8,7 @@
         --primary-color: #1978e5;
       }
     </style>
-<title>Stitch Design</title>
+<title>Zoltan Biro|Home</title>
 <link href="data:image/x-icon;base64," rel="icon" type="image/x-icon"/>
 <script src="https://cdn.tailwindcss.com?plugins=forms,container-queries"></script>
 </head>
